Docs: Attempt to fix view transitions flickering on iOS Safari

--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -83,8 +83,3 @@ dl.type-declaration-list dd {
 		navigation: auto;
 	}
 }
-
-:root::view-transition-old(root),
-:root::view-transition-new(root) {
-	animation-duration: 175ms;
-}
